modification page style et index

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <!-- CSS local -->
     <link href="css/reset.css" media="screen" rel="stylesheet">
     <link href="css/styles.css" media="screen" rel="stylesheet" type="text/css">
-<!--Titre page-->
+
+    <!--Titre page-->
     <title>Club 108</title>
 </head>
 <body>
+<!--Conteneur principal du site-->
 <div id="wrapper" class="grid-container">
 <!--Header - Titre et logo-->
     <header class="main-header relative" role="banner" >
         <img src="img/logo.png" alt="" width="350" height="164" class="flex flex-l">
         <h1 class="titre">La passion des films</h1>
     </header>
+<!--    Fin header-->
 <!--    Menu de navigation-->
     <nav class="main-nav flex">
         <ul class="flex" role="navigation">
@@ -32,9 +35,11 @@
             <input type="search" id="search-input" placeholder="  Rechercher" name="search" spellcheck="false" >
         </form>
     </nav>
+<!--Fin menu de navigation-->
 
-<!--    Section partie LaUne-->
-        <section class="laUne p1">
+    <!--    Section partie LaUne-->
+
+        <section class="laUne p1 m0-10">
             <h2 class="btn_titre">La UNE</h2>
             <img class="section_item" width="100%"
                  src="img/cinema.jpg"
@@ -63,20 +68,21 @@
                 </p>
             </article>
             <div class="button-group">
-                <button class="btn section_item button-inline" type="button">
+                <button class="btn section_item button-inline mt20" type="button">
                     Réserver
                 </button>
-                <button class="btn section_item button-inline" type="button">
+                <button class="btn section_item button-inline mt20" type="button">
                     Commander l'affiche
                 </button>
             </div>
 
         </section>
+<!--Fin section LaUne-->
 
 <!--    Section partie horaire-->
-        <section class="horaire p1">
+        <section class="horaire p1 m0-10">
             <h2 class="btn_titre">Horaires</h2>
-<!--            Tableau des Horaires-->
+        <!--Tableau des Horaires-->
             <table class="blueTable">
                 <thead>
                 <tr>
@@ -99,10 +105,12 @@
                 </tbody>
                 </tr>
             </table>
+        <!--Fin tableau des horaires-->
+<!--  Fin section horaire          -->
 
 <!--            Section partie adresse-->
         </section>
-        <section class="adresse p1">
+        <section class="adresse p1 m0-10">
             <h2 class="btn_titre p1">Adresse</h2>
             <div class="hcard ">
                 <h2 class="p-org mt1">Le Club 108</h2>
@@ -113,9 +121,10 @@
                 </address>
             </div>
         </section>
+<!--    Fin section adresse-->
 
 <!--Section partie portfolio-->
-        <section class="portfolio p1">
+        <section class="portfolio p1 m0-10">
             <h2 class="btn_titre">Portfolio</h2>
             <div class="boite-survol relative">
             <img class="section_item" width="100%"
@@ -134,8 +143,10 @@
             </div>
         </section>
 
+<!--    Fin section portfolio-->
+
 <!--  Section partie Semaine-->
-        <section class="semaine p1">
+        <section class="semaine p1 m0-10">
             <h2 class="btn_titre">Cette semaine</h2>
             <div class="grid_article">
             <article class="section_item demi">
@@ -177,8 +188,11 @@
             </article>
             </div>
         </section>
+
+<!--    Fin section semaine-->
+
 <!--    Pied de page principale-->
-    <footer class="main-footer" role="contentinfo">
+    <footer class="main-footer m0-10" role="contentinfo">
 
         <ul class="items-footer-container">
             <li class="item-list"><a href="">CLUB 108</a></li>
@@ -200,9 +214,10 @@
         </ul>
         <img src="img/logo.png" alt="" width="175" height="82">
     </footer>
-
+<!--Fin du pied de page principale-->
 
 </div>
+<!--Fin du conteneur principal du site-->
 
 </body>
 </html>
