--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
                     (Des Suprêmes Biens et des Suprêmes Maux) de Cicéron. Cet ouvrage, très populaire pendant la Renaissance,
                     est un traité sur la théorie de l'éthique. Les premières lignes du Lorem Ipsum, "Lorem ipsum dolor sit amet...", proviennent de la section 1.10.32.
 
-                    L'extrait standard de Lorem Ipsum utilisé depuis le XVIè siècle est reproduit ci-dessous pour les curieux.
+                    L'extrait standard de Lorem Ipsum utilisé depuis le XVIè siècle est Lorem Ipsum reproduit ci-dessous pour les curieux.
                     Les sections 1.10.32 et 1.10.33 du "De Finibus Bonorum et Malorum" de Cicéron sont aussi reproduites dans leur version originale,
                     accompagnée de la traduction anglaise de H. Rackham (1914).
+                    <span>
+                        <a href="#">Lire la suite</a>
+                    </span>
                 </p>
             </article>
             <div class="button-group">
@@ -164,8 +167,11 @@
                     Il trouve ses racines dans une oeuvre de la littérature latine classique datant de 45 av. J.-C.,
                     le rendant vieux de 2000 ans. Un professeur du Hampden-Sydney College, en Virginie, s'est intéressé
                     à un des mots latins les plus obscurs, consectetur, extrait d'un passage du Lorem Ipsum, et en étudiant
-
+                    <span>
+                        <a href="#">Lire la suite</a>
+                    </span>
                 </p>
+
             </article>
 
             <article class="section_item demi mt20">
@@ -182,9 +188,12 @@
                     Contrairement à une opinion répandue, le Lorem Ipsum n'est pas simplement du texte aléatoire.
                     Il trouve ses racines dans une oeuvre de la littérature latine classique datant de 45 av. J.-C.,
                     le rendant vieux de 2000 ans. Un professeur du Hampden-Sydney College, en Virginie, s'est intéressé
-                    à un des mots latins les plus obscurs, consectetur, extrait d'un passage du Lorem Ipsum, et en étudiant
-
+                    à un des mots latins les plus obscurs, consectetur, extrait d'un passage du Lorem Ipsum, et en étudiant.
+                    <span>
+                        <a href="#">Lire la suite</a>
+                    </span>
                 </p>
+
             </article>
             </div>
         </section>
